# zeitgeistai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md  mvp-scope.md  original-blueprint.md  research-synthesis.md  risk-analysis.md  technical-specification.md
src/: __init__.py  config.py  main.py
src/collectors/: __init__.py  async_base.py  async_bluesky.py  async_gdelt.py  async_mastodon.py  async_trends.py  bluesky.py  gdelt.py  mastodon.py  trends.py
src/generators/: __init__.py  illustration.py  synthesis.py  verification.py
src/processors/: __init__.py  clustering.py  contrarian.py  dedup.py  embeddings.py  scoring.py  story_arc.py
src/publishers/: __init__.py  bluesky.py  mastodon.py
src/storage/: __init__.py  qdrant.py
tests/: test_async_performance.py  test_pipeline.py
